Check the actions of the table.